# usbhidusage

./: .gitignore  Cargo.toml  LICENSE  README.md
.github/workflows/: rust-clippy.yml  rust.yml
src/: lib.rs  main.rs
src/arcade/: arcade.rs  mod.rs
src/auxiliary_display/: auxiliary_display.rs  mod.rs
src/barcode_scanner/: barcode_scanner.rs  mod.rs
src/battery_system/: battery_system.rs  mod.rs
src/braille_display/: braille_display.rs  mod.rs
src/button/: button.rs  mod.rs
src/camera_control/: camera_control.rs  mod.rs
src/consumer/: consumer.rs  mod.rs
src/digitizers/: digitizers.rs  mod.rs
src/eye_and_head_trackers/: eye_and_head_trackers.rs  mod.rs
src/fast_identify_online_alliance/: fast_identify_online_alliance.rs  mod.rs
src/game_controls/: game_controls.rs  mod.rs
src/gaming_device/: gaming_device.rs  mod.rs
src/generic_desktop/: generic_desktop.rs  mod.rs
src/generic_device_controls/: generic_device_controls.rs  mod.rs
src/haptics/: haptics.rs  mod.rs
src/keyboard/: keyboard.rs  mod.rs
src/led/: led.rs  mod.rs
src/lighting_and_illumination/: lighting_and_illumination.rs  mod.rs
src/magnetic_stripereader/: magnetic_stripereader.rs  mod.rs
src/medical_instrument/: medical_instrument.rs  mod.rs
src/monitor/: mod.rs  monitor.rs
src/monitor_enumerated/: mod.rs  monitor_enumerated.rs
src/ordinal/: mod.rs  ordinal.rs
src/physical_input_device/: mod.rs  physical_input_device.rs
src/power/: mod.rs  power.rs
src/preferred_colors/: mod.rs  preferred_colors.rs
src/scales/: mod.rs  scales.rs
tests/: keyboard.rs
(+16 files in other folders)
