[package]
name = "usbhidusage"
version = "0.1.4"
edition = "2021"
repository = "https://github.com/Cry-Tokyo/usbhidusage"
keywords = ["hid", "usb", "usage", "table", "hidusbtable"]
categories = ["visualization", "development-tools", "encoding", "no-std"]
license = "MIT"
description = "A general purpose library for working with usb Human Interface Device Descriptors from the HID Usage Tables for Universal Serial Bus (USB) v1.5"

[features]
no_std = []


[dependencies]

[dev-dependencies]
pcap = "2.2.0"
pnet = "0.35.0"
